[gd_scene load_steps=5 format=3 uid="uid://jmn8sm700wk7"]

[ext_resource type="PackedScene" uid="uid://bk4abyif0mspw" path="res://Scripts/pipes.tscn" id="1_52qgw"]
[ext_resource type="Script" uid="uid://ci14v4ddth7kq" path="res://Scenes/escape.gd" id="1_c3k32"]
[ext_resource type="PackedScene" uid="uid://bgifws5m0ayh6" path="res://Scenes/ship.tscn" id="1_vrf6l"]

[sub_resource type="TileSet" id="TileSet_c3k32"]

[node name="Escape" type="Node2D"]
script = ExtResource("1_c3k32")

[node name="pipes" parent="." instance=ExtResource("1_52qgw")]

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_c3k32")
format = 2

[node name="CharacterBody2D" parent="." instance=ExtResource("1_vrf6l")]
position = Vector2(-248, 13)

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[node name="ScoreLabel" type="Label" parent="."]
visible = false
offset_left = -99.0
offset_top = -10.0
offset_right = 99.0
offset_bottom = 13.0
size_flags_horizontal = 4
text = "GAME OVER/PRESS SPACE"

[node name="GameOverLabel" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0
